[package]
name = "orby"
version = "0.1.0"
authors = ["ha-desu"]
edition = "2021"
description = "Orby: A in-memory index engine for fixed-length 128-bit data."
license = "MIT"
repository = "https://github.com/ha-desu/orby_rs"
readme = "README.md"
keywords = ["index", "in-memory", "timestream", "fast"]
categories = ["data-structures", "database-implementations"]

[dependencies]
dashmap = "6.0"
serde = { version = "1.0", features = ["derive"] }
parking_lot = "0.12"
sysinfo = "0.30"
thiserror = "1.0"
once_cell = "1.19"
rayon = "1.10"
tokio = { version = "1.36", features = ["fs", "io-util", "rt-multi-thread", "sync", "macros"] }
cache-size = "0.7.0"
bytemuck = "1.25.0"
libc = "0.2.180"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1.36", features = ["time"] }

[[bench]]
name = "performance_comparison"
harness = false
